Added CSS to prevent Body Scrolling when Modal is open

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -222,3 +222,8 @@ button.checkoutButtons{
 	text-align:left;
 	padding-left: 50px;
 }
+
+/*Prevents Body-Scrolling when Modal is open.*/
+body.modal-open {
+    overflow: hidden;
+}
