--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -168,8 +168,8 @@ table.center{
 	background-color: #1C1C1C;
 }
 .priceTable.table, tr.data:hover{
-	color:black;
-	background-color: white;
+/*	color:black;*/	
+	background-color: black;
 }
 span.yellow {
 	color:yellow;
